# chat-embedding

./: .env  .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.sh  setup_env.py  startup.py  ui.py  verificar.py
.streamlit/: config.toml
data/: aritmetica.txt  ia.txt  musica.txt  python.txt  redes.txt
db/: engine.py  models.py  repository.py  schemas.py
pages/: 1_Chat.py  2_Explorar.py  3_Quiz.py  4_Aprender.py  5_Dashboard.py  6_Top.py  7_Agregar.py
services/: chat.py  embedding_engine.py  evaluar.py  math_engine.py  normalize.py
